# qiAgent

./: README.md  categorized_jobs.py  config.yml  job_data_city.json  main.py  pdfprocessor.py  qibot.py  requirements.txt  to_mcp.py
classified_data/: 10年以上_硕士.json  1年以内_不限.json  1年以内_本科.json  3-5年_不限.json  3-5年_本科.json  5-10年_不限.json  在校-应届_本科.json  在校-应届_硕士.json  经验不限_不限.json  经验不限_本科.json  经验不限_硕士.json
mcp_server/: mcp_server.py
output/: result.md  resume.json
to_mofa/agent-hub/pdf2text/: pyproject.toml
to_mofa/agent-hub/pdf2text/pdf2text/: main.py
to_mofa/agent-hub/qiAgent/: config.yml  pyproject.toml
to_mofa/agent-hub/qiAgent/classified_data/: 1-3年_不限.json  1-3年_本科.json  1-3年_硕士.json  10年以上_本科.json  1年以内_硕士.json  3-5年_硕士.json  5-10年_本科.json  5-10年_硕士.json  在校-应届_不限.json  在校-应届_本科.json  经验不限_不限.json  经验不限_本科.json  经验不限_硕士.json
to_mofa/agent-hub/qiAgent/mcp_server/: mcp_server.py
to_mofa/agent-hub/qiAgent/qiagent/: main.py  pdfprocessor.py  qibot.py
to_mofa/examples/qiAgent/: a.yml  readme.md
to_mofa/examples/qiAgent/output/: result.md  resume.json
