[tool.poetry]
name = "pdf2text"
version = "0.1.1"
authors = [
    "qi",
]
description = "提取pdf文本"
license = "MIT License"
homepage = "https://github.com/moxin-org/mofa"
documentation = "https://github.com/moxin-org/mofa/blob/main/README.md"
packages = [{ include = "pdf2text" }]

[tool.poetry.dependencies]
pyarrow = ">= 5.0.0"

[tool.poetry.scripts]
pdf2text = "pdf2text.main:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"


