[tool.poetry]
name = "qiAgent"
version = "0.1.1"
authors = [
    "qi",
]
description = "推荐岗位"
license = "MIT License"
homepage = "https://github.com/moxin-org/mofa"
documentation = "https://github.com/moxin-org/mofa/blob/main/README.md"
packages = [{ include = "qiagent" }]
[tool.setuptools]
package-dir = { "" = "qiagent" }
[tool.poetry.dependencies]
pyarrow = ">= 5.0.0"

[tool.poetry.scripts]
qiAgent = "qiagent.main:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"


